# premir_cpp

./: .clang-format  .gitignore  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  build  eclipse_as_idea.epf  mytmux.conf  myvimrc  template.Makefile  vim-commands.txt
R8/Src/: c4.5  c4.5rules  consult  consultr  xval-prep
lvq_pak-3.1/: VERSION  accuracy  accuracy.c  balance  balance.c  classify  classify.c  cmatr  cmatr.c  elimin  eveninit.c  extract  knntest  knntest.c  lvq_run  lvq_run.c  lvqtrain.c  makefile  makefile.dos  mcnemar  mindist  olvq1  pick  propinit  sammon  setlabel  setlabel.c  showlabs  showlabs.c  stddev
mybuild/: Makefile  speech_som_initialized.cod  speech_som_initialized_2.cod  speech_som_trained.cod  sspy_data_summary_1.cod  sspy_data_summary_2.cod  sspy_data_summary_3.cod  sspy_data_summary_4.cod  sspy_data_summary_5.cod  sspy_data_summary_6.cod  sspy_som_initialized_5_80_80.cod  sspy_som_trained_1_80_80.cod  sspy_som_trained_80_80_for_1000000_by_20.cod  sspy_som_trained_80_80_for_400000_by_10_gaus.cod  test_csv_file_summary.cod  test_speech_signal_summary.cod
som_pak-3.1/: datafile.c  fileio.c  fileio.h  lininit  linmyout.cod  lvq_pak.c  map.c  mapinit  mapinit.c  myex.fvs  myex.nvs  myex_p1.eps  mylin1.cod  mylin2.cod  mylin4.cod  mylin5.cod  mylin6.cod  mylin7.cod  mylin8.cod  myout.cod  myumat3.ps  myumat3_a.ps  myumat3_fts_m_a.ps  myumat3_m.ps  myumat3_m_a.ps  myumat8_m_a.ps  myvcalout.cod  myvsomout.cod  out_neurals.cod  out_neurals3.cod  out_neurals3_fts.cod  out_neurals3_fts_p1.ps  out_neurals3_fts_p2.ps  out_neurals3_fts_p3.ps  out_neurals3_fts_p4.ps  out_neurals3_fts_p5.ps  out_neurals3_fts_tr.ps  out_neurals3_p1.ps  out_neurals3_p2.ps  out_neurals3_p3.ps  (+35 more)
src/: CMakeLists.txt  Sales_item.h  main.cpp  primer.cpp  sample8_5.cpp
src/cache/: DirCache.h  LinkedHashMap.h  ReadCache.h  StringBuffer.cpp  StringBuffer.h  StringList.h  cache.h  compat-utils.cpp  compat-utils.h  hash-utils.cpp  hash-utils.h  hashmap.c  qsort_s.cpp  qsort_s.h  str-intern.cpp  str-intern.h  strbuf-utils.cpp  strbuf-utils.h  strbuf.cpp  strintern.cpp  strintern.h  utf8.c  utf8.h  wrapper.cpp  wrapper.h
src/comb/: Backtrack.h  BacktrackSearch.h  PermutationBacktrackSearch.h  SubsetBacktrackSearch.h
src/file/: CsvFileReader.h  CsvFileRowParser.h  CsvFileSummary.h  CsvFileWriter.h  FileReader.h  LineFileReader.h  RowReader.h
src/foo/: CMakeLists.txt  foo.cpp  foo.h
src/graphics/: Chart.cpp  Chart.h  ChartColormap.h  ChartData.cpp  ChartData.h  ChartPoints.cpp  ChartPoints.h  ChartThread.h  PointChart.h  SammonMapChart.h  StoreImage.h  UMatChart.h  color_utils.cpp  color_utils.h
src/kohonen/: AlphaFunctions.h  ArrayStreamReader.h  NetworkInitializer.h  NeuralNetwork.h  RandomGenerator.cpp  RandomGenerator.h  SammonMap.h  SomKeeper.h  SomTrainer.h  UMatrixMap.h  WinnerFunctions.h
src/matrix/: Determinant.h  EigenVectors.h  GramSchmidtNormalized.h  GramSchmidtStream.h  MatrixUtils.h
src/ml/: DigitalFilter.cpp  DigitalFilter.h  Entropy.h  GramSchmidtBasis.cpp  GramSchmidtBasis.h  LevensteinDistance.h  MlUtils.cpp  MlUtils.h
test/: CArrayListTest.cpp  CArrayListTest.h  CMatrixTest.cpp  CMatrixTest.h  LinkedListTest.cpp  LinkedListTest.h  linked-list-test.cpp  linked-list-test.h  myxcb.h  test.cpp  test.h
(+164 files in other folders)
