cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lxcb -g -pthread -lpng")
project(dummy_project)
include_directories(src)
#include_directories(src/graphics)
#include_directories(src/utils)
#include_directories(src/ml)
include_directories(test)
#include_directories(test/ml)
#include_directories(test/utils)
add_executable(dummy_executable
        test/utils/LinkedListTest.cpp
        test/utils/CArrayListTest.cpp
        test/utils/CMatrixTest.cpp
        test/utils/SMatrixTest.cpp
        test/utils/RMatrixTest.cpp
        test/utils/RDMatrixTest.cpp
        test/utils/R3DMatrixTest.cpp
        test/utils/HashMapArrayTest.cpp
        test/utils/ArrayUtilsTest.cpp
        test/utils/IntBitSetTest.cpp
        test/utils/CHashSetTest.cpp
        test/utils/matrix_utils_test.cpp
        test/matrix/DeterminantTest.cpp
        test/matrix/GramSchmidtTest.cpp
        test/file/FileReaderTest.cpp
        test/file/CsvFileSummaryTest.cpp
        test/ml/DigitalFilterTest.cpp
        test/sspy/SspyTest.cpp
        test/kohonen/KohonenTest.cpp
        test/kohonen/KohonenDemosTest.cpp
        test/coursera/CourseraTest.cpp
        src/ml/DigitalFilter.cpp
        src/utils/matrix_utils.cpp
        src/graphics/color_utils.cpp
        test/test.cpp)
